# labrag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.labrag_cache/: processed_docs.db
configs/: default.yml  prompts.yml
data/vector_store/: index.faiss  index.pkl
docs/: ROADMAP.md
labrag/: config.py  utils.py
labrag/agents/: graph.py  nodes.py  state.py  utils.py
labrag/api/: main.py
labrag/api/routes/: chat.py  health.py
labrag/app/: main.py
labrag/ingestion/: knowledge_base.py
labrag/ingestion/loaders/: document_loader.py  vector_store.py
labrag/ingestion/parsers/: cache.py  models.py  pdf_parser.py  url_parser.py
labrag/integrations/: __init__.py
labrag/integrations/slack/: __init__.py  app.py  main.py  utils.py
labrag/integrations/streamlit/: __init__.py  main.py
notebooks/: cache_and_vector_store.ipynb  demo.ipynb  demo_LandingAI.ipynb  graph.ipynb
scripts/: setup_knowledge_base.py
